# share_c_python

./: .gitignore  LICENSE  README.md
exp-ctypes/: CMakeLists.txt  DiffRec.cpp  README.md  diffrec.py
numpy-c-api/: README.md  hello.cpp  makefile  pyproject.toml  setup.py  setup_distutils.py.txt  test_mod.py
pybind/: pass_struct.cpp  struct_example.py
